<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="2dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/exit_icon"
        android:textColor="#C91C1C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/main_card"
        app:layout_constraintStart_toStartOf="@+id/main_card"
        app:layout_constraintTop_toTopOf="@+id/main_card" />

    <TextView
        android:id="@+id/warning_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit"
        app:layout_constraintBottom_toTopOf="@id/yesBtn"
        android:textColor="#000000"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/exit_txt"
        app:layout_constraintStart_toStartOf="@+id/exit_txt"
        app:layout_constraintTop_toBottomOf="@+id/exit_txt" />

    <ImageView
        android:id="@+id/yesBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/no_btn"
        app:layout_constraintBottom_toBottomOf="@+id/main_card"
        app:layout_constraintStart_toStartOf="@+id/main_card"
        app:layout_constraintTop_toBottomOf="@+id/warning_txt"
        app:srcCompat="@drawable/stroke_bg"
        app:tint="@color/darkOrange" />

    <TextView
        android:id="@+id/yes_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/yes"
        android:textColor="@color/black"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/yesBtn"
        app:layout_constraintEnd_toEndOf="@+id/yesBtn"
        app:layout_constraintStart_toStartOf="@+id/yesBtn"
        app:layout_constraintTop_toTopOf="@+id/yesBtn" />

    <ImageView
        android:id="@+id/no_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/main_card"
        app:layout_constraintEnd_toEndOf="@+id/main_card"
        app:layout_constraintStart_toEndOf="@id/yesBtn"
        app:layout_constraintTop_toBottomOf="@+id/warning_txt"
        app:srcCompat="@drawable/stroke_bg" />



    <TextView
        android:id="@+id/no_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/no"
        android:elevation="2dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/yesBtn"
        app:layout_constraintBottom_toBottomOf="@+id/no_btn"
        app:layout_constraintEnd_toEndOf="@+id/no_btn"
        app:layout_constraintStart_toStartOf="@+id/no_btn"
        app:layout_constraintTop_toTopOf="@+id/no_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>